fix sonarqube issues: maintanability for kupon model test regarding code refactor for throw runtime exception